fixed media queries for mobile still working on tablet

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@ body {
   top:100px; 
   right: 150px;
   opacity: .95;
+  width: 20rem;
 }
 .card2{
   position: absolute;
@@ -17,6 +18,7 @@ body {
   opacity: .95;
   background: transparent;
   color:white;
+  width: 30rem;
 }
 
 .style {
@@ -142,11 +144,33 @@ figure {
   text-align: center;
 }
 
-canvas{
-  
-}
-
 figure{
   width: 70%;
   height: 30%;
+}
+
+/********************************** MEDIA QUERIES *******************************/
+@media only screen and (min-width: 400px) and (max-width:670px) {
+  /* For mobile phones: */
+  .card {
+    position: static;
+    width: 32rem;
+  }
+  .card2{
+    position: static;
+    width: 32rem;
+  }
+}  
+
+@media only screen and (min-width:770px) and (max-width: 900px) {
+  /* For tablets: */
+  .card {
+    position: static;
+    right: 0px;
+    
+  }
+  .card2{
+    position: static;
+    left: 0px;
+  }
 }
